# rust_axum_store

./: .gitignore  Cargo.toml  README.md
src/: config.rs  lib.rs  main.rs  server_state.rs
src/adapters/: mod.rs
src/adapters/crypto/: mod.rs
src/adapters/sqlite/: mod.rs
src/error/: mod.rs
src/router/: hello_store.rs  hello_world.rs  mod.rs
src/server_infra/: app_init.rs  app_state.rs  mod.rs  start_app_store_server.rs
src/store_app/: user_management.rs
src/store_core/: mod.rs  shop_item.rs  shopping_chart.rs  user.rs
