[package]
name = "rust_axum_store"
version = "0.1.0"
authors = ["MajorX234 <majorx234@googlemail.com>"]
edition = "2024"

[lib]
name = "store"
path = "src/lib.rs"

[[bin]]
name = "rust_axum_store_server"
path = "src/main.rs"

[[bin]]
name = "start_app_store_server"
path = "src/server_infra/start_app_store_server.rs"

[[bin]]
name ="init_store_database"
path = "src/init_store_database/bin/main.rs"

[dependencies]
argon2 = { version = "0.5.3",  features = ["password-hash", "rand", "std"]}
async-trait = "0.1.89"
axum = { version = "0.8.8", features=["ws", "macros"]}
axum-extra = { version = "0.12.5", features = ["typed-header"] }
bytes = "1.11.0"
chrono = { version = "0.4.43", features = ["serde"] }
rusqlite = { version = "0.38.0", features = ["bundled", "chrono"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tokio = { version = "1.49.0", features = ["full"] }
tower = { version = "0.4.13", features = ["util", "timeout"] }
tower-http = { version = "0.6.8", features = ["fs", "trace"] }
tracing = "0.1.44"
uuid = { version = "1.20.0", features = ["v4"] }
